include_directories("${PLASMA_SOURCE_ROOT}/Apps")
include_directories("${PLASMA_SOURCE_ROOT}/FeatureLib")
include_directories("${PLASMA_SOURCE_ROOT}/NucleusLib")
include_directories("${PLASMA_SOURCE_ROOT}/PubUtilLib")

if(WIN32)
    if(PLASMA_BUILD_CLIENT)
        add_subdirectory(plClient)
        add_subdirectory(plCrashHandler)
    endif()

    if(PLASMA_BUILD_LAUNCHER)
        add_subdirectory(plUruLauncher)
    endif()
endif()

if(APPLE)
    if(PLASMA_BUILD_CLIENT)
        add_subdirectory(plClient)
    endif()
endif()

if(PLASMA_BUILD_TOOLS)
    add_subdirectory(plPythonPack)
    add_subdirectory(plFileSecure)
    add_subdirectory(plFileEncrypt)
    add_subdirectory(plPageInfo)
    add_subdirectory(plPageOptimizer)
endif()
