include_directories("${PLASMA_SOURCE_ROOT}/CoreLib")
include_directories("${PLASMA_SOURCE_ROOT}/FeatureLib")
include_directories("${PLASMA_SOURCE_ROOT}/NucleusLib")
include_directories("${PLASMA_SOURCE_ROOT}/PubUtilLib")

add_subdirectory(inc)
add_subdirectory(pfAnimation)
add_subdirectory(pfAudio)
add_subdirectory(pfCamera)
add_subdirectory(pfCharacter)
add_subdirectory(pfConditional)
add_subdirectory(pfConsole)
add_subdirectory(pfConsoleCore)
if(WIN32)
    add_subdirectory(pfCrashHandler)
endif()
if(PLASMA_PIPELINE_DX)
    add_subdirectory(pfDXPipeline)
endif()
add_subdirectory(pfGameGUIMgr)
add_subdirectory(pfGameMgr)
add_subdirectory(pfGameScoreMgr)
if(PLASMA_PIPELINE_GL)
    add_subdirectory(pfGLPipeline)
endif()
if(PLASMA_PIPELINE_METAL)
    add_subdirectory(pfMetalPipeline)
endif()
add_subdirectory(pfJournalBook)
add_subdirectory(pfLocalizationMgr)
add_subdirectory(pfMessage)
add_subdirectory(pfMoviePlayer)
add_subdirectory(pfPasswordStore)
add_subdirectory(pfPatcher)
add_subdirectory(pfPython)
add_subdirectory(pfSurface)
