add_definitions(-D_LIB)

add_subdirectory(inc)
add_subdirectory(pnAddrInfo)
add_subdirectory(pnAsyncCore)
add_subdirectory(pnAsyncCoreExe)
#add_subdirectory(pnCrash)              # Not being used in any current sln
#add_subdirectory(pnCrashExe)           # Not being used in any current sln
#add_subdirectory(pnCsrCli)             # Not being used in any current sln
add_subdirectory(pnCsrNet)
add_subdirectory(pnDispatch)
add_subdirectory(pnFactory)
add_subdirectory(pnGameMgr)
add_subdirectory(pnIni)
add_subdirectory(pnIniExe)
add_subdirectory(pnInputCore)
add_subdirectory(pnKeyedObject)
add_subdirectory(pnMail)
add_subdirectory(pnMessage)
add_subdirectory(pnModifier)
add_subdirectory(pnNetBase)
add_subdirectory(pnNetCli)
add_subdirectory(pnNetCommon)
add_subdirectory(pnNetDiag)
#add_subdirectory(pnNetLog)             # Not being used in any current sln
add_subdirectory(pnNetProtocol)
#add_subdirectory(pnOraLib)             # Not being used in any current sln
add_subdirectory(pnProduct)
add_subdirectory(pnSceneObject)
add_subdirectory(pnSimpleNet)
#add_subdirectory(pnSqlLib)             # Not being used in any current sln
add_subdirectory(pnTimer)
add_subdirectory(pnUtils)
add_subdirectory(pnUtilsExe)
add_subdirectory(pnUUID)
