add_definitions(-D_LIB)

add_subdirectory(inc)
add_subdirectory(pnAsyncCore)
if(WIN32)
    add_subdirectory(pnAsyncCoreExe)
endif()
add_subdirectory(pnDispatch)
add_subdirectory(pnEncryption)
add_subdirectory(pnFactory)
add_subdirectory(pnGameMgr)
if(WIN32)
    add_subdirectory(pnInputCore)
endif()
add_subdirectory(pnKeyedObject)
add_subdirectory(pnMessage)
add_subdirectory(pnModifier)
add_subdirectory(pnNetBase)
add_subdirectory(pnNetCli)
add_subdirectory(pnNetCommon)
add_subdirectory(pnNetProtocol)
add_subdirectory(pnSceneObject)
add_subdirectory(pnTimer)
add_subdirectory(pnUtils)
add_subdirectory(pnUUID)
