include_directories("${PLASMA_SOURCE_ROOT}/CoreLib")
include_directories("${PLASMA_SOURCE_ROOT}/NucleusLib")

add_subdirectory(inc)
add_subdirectory(pnAsyncCore)
add_subdirectory(pnAsyncCoreExe)
add_subdirectory(pnDispatch)
add_subdirectory(pnEncryption)
add_subdirectory(pnFactory)
add_subdirectory(pnGameMgr)
add_subdirectory(pnInputCore)
add_subdirectory(pnKeyedObject)
add_subdirectory(pnMessage)
add_subdirectory(pnModifier)
add_subdirectory(pnNetBase)
add_subdirectory(pnNetCli)
add_subdirectory(pnNetCommon)
add_subdirectory(pnNetProtocol)
add_subdirectory(pnSceneObject)
add_subdirectory(pnTimer)
add_subdirectory(pnUtils)
add_subdirectory(pnUUID)
