include_directories("${PLASMA_SOURCE_ROOT}/CoreLib")
include_directories("${PLASMA_SOURCE_ROOT}/NucleusLib")
include_directories("${PLASMA_SOURCE_ROOT}/PubUtilLib")

add_subdirectory(inc)
add_subdirectory(plAgeDescription)
add_subdirectory(plAgeLoader)
add_subdirectory(plAnimation)
add_subdirectory(plAudible)
add_subdirectory(plAudio)
add_subdirectory(plAudioCore)
add_subdirectory(plAvatar)
add_subdirectory(plClientResMgr)
add_subdirectory(plClipboard)
add_subdirectory(plCompression)
add_subdirectory(plContainer)
add_subdirectory(plDrawable)
add_subdirectory(plFile)
add_subdirectory(plGImage)
add_subdirectory(plGLight)
add_subdirectory(plInputCore)
add_subdirectory(plInterp)
add_subdirectory(plIntersect)
add_subdirectory(plMath)
add_subdirectory(plMessage)
add_subdirectory(plModifier)
add_subdirectory(plNetClient)
add_subdirectory(plNetClientComm)
add_subdirectory(plNetClientRecorder)
add_subdirectory(plNetCommon)
add_subdirectory(plNetGameLib)
add_subdirectory(plNetMessage)
add_subdirectory(plNetTransport)
add_subdirectory(plParticleSystem)
add_subdirectory(plPhysical)
add_subdirectory(plPhysX)
add_subdirectory(plPipeline)
add_subdirectory(plProgressMgr)
add_subdirectory(plResMgr)
add_subdirectory(plScene)
add_subdirectory(plSDL)
add_subdirectory(plStatGather)
add_subdirectory(plStatusLog)
add_subdirectory(plSurface)
add_subdirectory(plTransform)
add_subdirectory(plUnifiedTime)
add_subdirectory(plVault)
if(WIN32)
	add_subdirectory(plWinDpi)
endif()
