include_directories("${PLASMA_SOURCE_ROOT}/CoreLib")
include_directories("${PLASMA_SOURCE_ROOT}/NucleusLib")
include_directories("${PLASMA_SOURCE_ROOT}/NucleusLib/inc")
include_directories("${PLASMA_SOURCE_ROOT}/PubUtilLib")
include_directories("${PLASMA_SOURCE_ROOT}/PubUtilLib/inc")
include_directories("${PLASMA_SOURCE_ROOT}/FeatureLib")
include_directories("${PLASMA_SOURCE_ROOT}/FeatureLib/inc")

add_subdirectory(pfConsoleCoreTest)
add_subdirectory(pfPasswordStoreTest)
add_subdirectory(pfPythonTest)
